--- a/src/batchrender.ui
+++ b/src/batchrender.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>671</width>
-    <height>329</height>
+    <height>422</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,7 +44,17 @@
       <property name="bottomMargin">
        <number>6</number>
       </property>
-      <item row="0" column="0">
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="aspectCheckBox">
+        <property name="text">
+         <string>Retain stored aspect ratio</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QWidget" name="widget" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout_19">
          <property name="leftMargin">
@@ -141,12 +151,12 @@
         </layout>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QCheckBox" name="aspectCheckBox">
+      <item row="0" column="0">
+       <widget class="QLabel" name="tileLabel">
         <property name="text">
-         <string>Retain stored aspect ratio</string>
+         <string>Note: this will render multiple tiles of the complete image which need to be stitched afterwards with an external tool. This allows for larger total image sizes. For smaller sizes, use the normal (non-tiled) batch render.</string>
         </property>
-        <property name="checked">
+        <property name="wordWrap">
          <bool>true</bool>
         </property>
        </widget>
